# fastapi_framework

./: LICENSE  main.py  pyproject.toml
middlerware/: middle_auth.py
models/: usermodel.py
routers/: user.py
tools/: database.py
